[package]
name = "aws-unlock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cancellable-timer = "0.1.0"
clap = { version = "4.4.1", features = ["derive"] }
ctrlc = "3.4.0"
home = "0.5.5"
itertools = "0.11.0"
tokio = { version = "1.32.0", features = ["full"] }
